--- a/.bin/install
+++ b/.bin/install
@@ -28,3 +28,15 @@ for files_to_copy in ${files_to_copy}; do
 
   cp $REPOSITORY/${files_to_copy} ${file}
 done
+
+if [ -x "$(command -v brew)" ]; then
+  brew install \
+    asdf \
+    git \
+    gnupg \
+    peco \
+    stern \
+    terraform \
+    tree \
+    vim
+fi
