Generate ssh key

--- a/.bin/install
+++ b/.bin/install
@@ -27,6 +27,21 @@ for file_to_link in ${files_to_link}; do
   ln -s $REPOSITORY/${file_to_link} ${link_file}
 done
 
+if [ ! -e ".ssh/id_ed25519" ]; then
+  echo "1) tadatoshi.tokutake@gmail.com"
+  echo "2) ttokutake@quipper.com"
+  read -p "Choose your email address: " num
+  case $num in
+      1)
+        email="tadatoshi.tokutake@gmail.com"
+        ;;
+      *)
+        email="ttokutake@quipper.com"
+        ;;
+  esac
+  ssh-keygen -t ed25519 -C $email
+fi
+
 files_to_copy="
   .bin/update
 "
