--- a/.bin/install
+++ b/.bin/install
@@ -3,6 +3,7 @@
 set -euo pipefail
 
 REPOSITORY=$HOME/repositories/dotfiles
+ASDF_VERSION=v0.9.0
 
 function prepare_directory () {
   local file_name=$1
@@ -70,9 +71,43 @@ if [ -x "$(command -v brew)" ]; then
     vim
 fi
 
-if [ -x "$(command -v asdf)" ]; then
+if [ -x "$(command -v apt-get)" ]; then
+  sudo apt install -y \
+    tree \
+    vim
+
+  # http://asdf-vm.com/guide/getting-started.html#_1-install-dependencies
+  sudo apt install -y \
+    curl \
+    git
+  if [ ! -d "$HOME/.asdf" ]; then
+    git clone https://github.com/asdf-vm/asdf.git $HOME/.asdf --branch $ASDF_VERSION
+  fi
+  set +u
+  source $HOME/.asdf/asdf.sh
+  set -u
+fi
+
+if [ -x "$(which asdf)" ]; then
   # https://github.com/rbenv/ruby-build/wiki#suggested-build-environment
-  brew install openssl readline
+  if [ -x "$(command -v brew)" ]; then
+    brew install openssl readline
+  fi
+  if [ -x "$(command -v apt-get)" ]; then
+    sudo apt install -y \
+      autoconf \
+      bison \
+      build-essential \
+      libssl-dev \
+      libyaml-dev \
+      libreadline6-dev \
+      zlib1g-dev \
+      libncurses5-dev \
+      libffi-dev \
+      libgdbm6 \
+      libgdbm-dev \
+      libdb-dev
+  fi
   asdf plugin add ruby https://github.com/asdf-vm/asdf-ruby.git
 
   asdf plugin add nodejs https://github.com/asdf-vm/asdf-nodejs.git
