--- a/.bin/install
+++ b/.bin/install
@@ -27,6 +27,20 @@ for file_to_link in ${files_to_link}; do
     continue
   fi
 
+  if [ -f "${link_file}" ]; then
+    if [ "${file_to_link}" = '.bashrc' ]; then
+      anchor="# from dotfiles"
+      if ! grep -q "${anchor}" ${link_file}; then
+        echo '' >> ${link_file}
+        echo ${anchor} >> ${link_file}
+        echo ". $REPOSITORY/${file_to_link}" >> ${link_file}
+      fi
+    else
+      echo "warn: ${link_file} exists as a file!"
+    fi
+    continue
+  fi
+
   prepare_directory ${link_file}
   ln -s $REPOSITORY/${file_to_link} ${link_file}
 done
@@ -46,19 +60,30 @@ if [ ! -f "$HOME/.ssh/id_ed25519.pub" ]; then
   ssh-keygen -t ed25519 -C $email
 fi
 
-if [ ! -f "$HOME/.vim/autoload/plug.vim" ]; then
-  curl -fLo $HOME/.vim/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
+if [ -x "$(command -v apt-get)" ]; then
+  sudo apt install -y \
+    bash-completion \
+    curl \
+    tree \
+    vim
+
+  read -p 'Do you install asdf? [y/n]: ' bool
+  case $bool in
+    y | yes)
+      email="tadatoshi.tokutake@gmail.com"
+      # http://asdf-vm.com/guide/getting-started.html#_1-install-dependencies
+      sudo apt install -y curl git
+      if [ ! -d "$HOME/.asdf" ]; then
+        git clone https://github.com/asdf-vm/asdf.git $HOME/.asdf --branch $ASDF_VERSION
+      fi
+      set +u
+      source $HOME/.asdf/asdf.sh
+      set -u
+      ;;
+    *)
+      ;;
+  esac
 fi
-
-files_to_copy="
-  .bin/update
-"
-for file_to_copy in ${files_to_copy}; do
-  file=$HOME/${file_to_copy}
-
-  prepare_directory ${file}
-  cp $REPOSITORY/${file_to_copy} ${file}
-done
 
 if [ -x "$(command -v brew)" ]; then
   brew install \
@@ -72,21 +97,19 @@ if [ -x "$(command -v brew)" ]; then
     vim
 fi
 
-if [ -x "$(command -v apt-get)" ]; then
-  sudo apt install -y \
-    bash-completion \
-    tree \
-    vim
-
-  # http://asdf-vm.com/guide/getting-started.html#_1-install-dependencies
-  # sudo apt install -y curl git
-  # if [ ! -d "$HOME/.asdf" ]; then
-  #   git clone https://github.com/asdf-vm/asdf.git $HOME/.asdf --branch $ASDF_VERSION
-  # fi
-  # set +u
-  # source $HOME/.asdf/asdf.sh
-  # set -u
+if [ ! -f "$HOME/.vim/autoload/plug.vim" ]; then
+  curl -fLo $HOME/.vim/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
 fi
+
+files_to_copy="
+  .bin/update
+"
+for file_to_copy in ${files_to_copy}; do
+  file=$HOME/${file_to_copy}
+
+  prepare_directory ${file}
+  cp $REPOSITORY/${file_to_copy} ${file}
+done
 
 if [ -x "$(which asdf)" ]; then
   # https://github.com/rbenv/ruby-build/wiki#suggested-build-environment
