--- a/.bin/install
+++ b/.bin/install
@@ -95,7 +95,8 @@ if [ -x "$(command -v brew)" ]; then
     stern \
     terraform \
     tree \
-    vim
+    vim \
+    xsel
 fi
 
 if [ ! -f "$HOME/.vim/autoload/plug.vim" ]; then
