--- a/.bin/install
+++ b/.bin/install
@@ -92,6 +92,10 @@ if [ -x "$(command -v brew)" ]; then
     xsel
 fi
 
+if [[ "$SHELL" == */zsh ]]; then
+  sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
+fi
+
 if [ ! -f "$HOME/.vim/autoload/plug.vim" ]; then
   curl -fLo $HOME/.vim/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
 fi
@@ -107,13 +111,16 @@ for file_to_copy in ${files_to_copy}; do
 done
 
 if [ -x "$(which mise)" ]; then
+  mise use -g usage
   if [[ "$SHELL" == */bash ]]; then
-    mise use -g usage
-    # This requires bash-completion to be installed
     mkdir -p /etc/bash_completion.d/
     mise completion bash --include-bash-completion-lib | sudo tee /etc/bash_completion.d/mise > /dev/null
     sudo sed -i -e \
       's/    \. "$_comp_init_startup_config"/    if [[ "$_comp_init_startup_config" != *\/mise ]]; then\n        . "$_comp_init_startup_config"\n    fi/' \
       /etc/bash_completion.d/mise
+  fi
+  if [[ "$SHELL" == */zsh ]]; then
+    mkdir -p /opt/homebrew/share/zsh/site-functions
+    mise completion zsh  > /opt/homebrew/share/zsh/site-functions/_mise
   fi
 fi
